--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,20 @@ go:
 - '1.15'
 arch:
   - amd64
-  - arm64
+
+dist: focal
+addons:
+  apt:
+    sources:
+      - sourceline: 'deb https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable'
+
+before_install:
+  - sudo rm -rf /var/lib/apt/lists/*
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce docker-ce-cli containerd.io
+  - sudo apt-get install -y qemu-user-static binfmt-support
+  - docker buildx create --use
+
 env:
   global:
     - GO_COOK_DOCKER_PREFIX=ottenwbe/ 
@@ -17,11 +30,11 @@ script:
   - make build  
   - make verify  
   - make release
-  - GO_COOK_ARCH=$TRAVIS_CPU_ARCH make docker
+  - make docker
 
 deploy:
   provider: script
-  script: GO_COOK_ARCH=$TRAVIS_CPU_ARCH make docker-push
+  script: make docker-buildx
   on:
-    tags: true
-    go: 1.15
+    all_branches: true
+    #tags: true
