--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -1,15 +1,15 @@
 ARG RELEASE=stretch-20200611
 FROM balenalib/rpi-raspbian:${RELEASE}
 
-ARG APP=go-cook
+ARG APP=recipes-manager
 ENV GIN_MODE release
 
-RUN mkdir -p /app; mkdir -p /etc/go-cook
+RUN mkdir -p /app; mkdir -p /etc/recipes-manager
 
 # Copy the app binary to /app
-COPY ${APP} /app/go-cook
+COPY ${APP} /app/recipes-manager
 
 # Make port 8080 available to the world outside this container
 EXPOSE 8080
 
-ENTRYPOINT ["/app/go-cook"]
+ENTRYPOINT ["/app/recipes-manager"]
