--- a/.travis.yml
+++ b/.travis.yml
@@ -3,25 +3,38 @@ go:
 - '1.15'
 arch:
   - amd64
-  - arm64
+
+dist: focal
+addons:
+  apt:
+    sources:
+      - sourceline: 'deb https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable'
+
 env:
   global:
-    - GO_COOK_DOCKER_PREFIX=ottenwbe/ 
+    - GO_COOK_DOCKER_PREFIX=ottenwbe/ GOFLAGS=-mod=vendor
+
+before_install:
+  - sudo rm -rf /var/lib/apt/lists/*
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce docker-ce-cli containerd.io
+  - sudo apt-get install -y qemu-user-static binfmt-support
+  - docker buildx create --use
 
 install:
-  - go get -u golang.org/x/lint/golint
+  - GO111MODULE=off go get -u golang.org/x/lint/golint
+  - GO111MODULE=off go get -u github.com/onsi/ginkgo/ginkgo
+  - GO111MODULE=off go get -u github.com/onsi/gomega/...
+  - GO111MODULE=off go get -u github.com/swaggo/swag/cmd/swag
 
 script:
-  - go get -u github.com/onsi/ginkgo/ginkgo
-  - go get -u github.com/onsi/gomega/...
-  - make build  
-  - make verify  
+  - make verify # qa steps
+  - make api-docu
   - make release
-  - GO_COOK_ARCH=$TRAVIS_CPU_ARCH make docker
+  - make docker
 
 deploy:
   provider: script
-  script: GO_COOK_ARCH=$TRAVIS_CPU_ARCH make docker-push
+  script: make docker-buildx
   on:
     tags: true
-    go: 1.15
