--- a/Dockerfile.old
+++ b/Dockerfile.old
@@ -1,8 +1,9 @@
-ARG RELEASE=stretch-20200611
-FROM balenalib/rpi-raspbian:${RELEASE}
+FROM docker.io/ubuntu:latest
 
 ARG APP=recipes-manager
 ENV GIN_MODE release
+
+RUN apt-get update && apt-get install -y ca-certificates
 
 RUN mkdir -p /app; mkdir -p /etc/recipes-manager
 
