--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,14 @@ env:
   global:
     - GO_COOK_DOCKER_PREFIX=ottenwbe/ GOFLAGS=-mod=vendor
 
+services:
+  - docker
+
 before_install:
   - sudo rm -rf /var/lib/apt/lists/*
   - sudo apt-get update
-  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce docker-ce-cli containerd.io
-  - sudo apt-get install -y qemu-user-static binfmt-support
+#  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce docker-ce-cli containerd.io
+#  - sudo apt-get install -y qemu-user-static binfmt-support
   - docker buildx create --use
 
 install:
