--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ services:
 before_install:
   - sudo rm -rf /var/lib/apt/lists/*
   - sudo apt-get update
+  - mkdir -vp ~/.docker/cli-plugins/
+  - curl --silent -L "https://github.com/docker/buildx/releases/download/v0.3.0/buildx-v0.3.0.linux-amd64" > ~/.docker/cli-plugins/docker-buildx
+  - chmod a+x ~/.docker/cli-plugins/docker-buildx
 #  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce docker-ce-cli containerd.io
 #  - sudo apt-get install -y qemu-user-static binfmt-support
   - docker buildx create --use
