--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ before_install:
   - mkdir -vp ~/.docker/cli-plugins/
   - curl --silent -L "https://github.com/docker/buildx/releases/download/v0.3.0/buildx-v0.3.0.linux-amd64" > ~/.docker/cli-plugins/docker-buildx
   - chmod a+x ~/.docker/cli-plugins/docker-buildx
-#  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce docker-ce-cli containerd.io
-#  - sudo apt-get install -y qemu-user-static binfmt-support
+  - sudo apt-get install -y qemu-user-static binfmt-support
   - docker buildx create --use
 
 install:
