--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,9 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    env:
+      GO_COOK_DOCKER_PREFIX: ottenwbe/
+      GOFLAGS: -mod=vendor
     steps:
     - uses: actions/checkout@v2
 
