--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -48,4 +48,4 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
     - name: Build Docker
-      run: make docker-buildx-dev
+      run: make dockerx-dev
