--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,8 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: 1.20
+        go-version: '1.20'
+      run: go version
 
     # setup build environment
     - run: GO111MODULE=off go get -u github.com/onsi/ginkgo/ginkgo
