--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
-      run: go version
+    - run: go version
 
     # setup build environment
     - run: GO111MODULE=off go get -u github.com/onsi/ginkgo/ginkgo
