test remove goflags

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,7 +28,7 @@ jobs:
     # setup build environment
     - run: GO111MODULE=off go get -u github.com/onsi/ginkgo/ginkgo
     - run: GO111MODULE=off go get -u github.com/onsi/gomega/...
-    - run: go install github.com/swaggo/swag/cmd/swag@latest
+    - run: GOFLAGS="" go install github.com/swaggo/swag/cmd/swag@latest
 
     # test application
     - name: Execute Verify and Test steps
