--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,8 +25,8 @@ jobs:
     - run: go version
 
     # setup build environment
-    - run: GO111MODULE=off go get -u github.com/onsi/ginkgo/ginkgo
-    - run: GO111MODULE=off go get -u github.com/onsi/gomega/...
+    - run: go install github.com/onsi/ginkgo/v2/ginkgo
+    - run: go get github.com/onsi/gomega/...
     - run: go install github.com/swaggo/swag/cmd/swag@latest
 
     # test application
